implemented members synchronization and replaced key from entity with jointable annotation